egyéb manifest fileok/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: wordpress-app
spec:
  selector:
    app.kubernetes.io/name: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
